# etchmem

./: .gitignore  README.md  pyproject.toml
demo/: README.md  main.py  requirements.txt
etchmem/: __init__.py  config.py  engine.py  models.py
etchmem.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
etchmem/connector/: base.py  remote.py
etchmem/consolidate/: worker.py
etchmem/recall/: recaller.py
etchmem/stores/: base.py  chroma_store.py
etchmem/util/: affectability.py  hashing.py
skill/: SKILL.md
skill/scripts/: consolidate.py  export.py  recall.py  remember.py
skillmem.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_consolidate_idempotent.py  test_export.py  test_formation_buckets.py  test_recall.py  test_reconsolidation.py  test_remember_recall.py
