[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "etchmem"
version = "0.1.5"
description = "A pluggable, embeddable reconsolidating skill memory engine for AI agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Andrey Olishchuk" }]
keywords = ["llm", "agent", "memory", "chromadb", "rag", "reconsolidation", "skill", "skills", "etchmem"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "chromadb>=1.5.0",
    "openai>=1.70.0",
    "anthropic>=0.100.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.urls]
Repository = "https://github.com/andrey-olishchuk/etchmem"

[tool.setuptools.packages.find]
where = ["."]
include = ["etchmem*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
